<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.innovapp.luk7.ui.home.HomeFragment"
        android:label="@string/title_home"

        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_voucher"
        android:name="com.innovapp.luk7.ui.voucher.VoucherFragment"
        android:label="@string/title_voucher"
        tools:layout="@layout/fragment_voucher" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.innovapp.luk7.ui.reports.ReportsFragment"
        android:label="@string/reportes"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.innovapp.luk7.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>