<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/title_settings"
                android:textColor="@color/texto"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.66"
                android:orientation="horizontal"/>

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/informaciion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informacion" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp"
                    app:cardBackgroundColor="@color/carcolor"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/desarrollador"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"

                                android:layout_marginRight="8dp"
                                app:srcCompat="@drawable/baseline_handyman_24"
                                app:tint="@color/alternativo" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/desarrollador"
                                android:textColor="@color/texto"
                                android:textSize="18sp" />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=">"
                                android:textColor="@color/texto" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@color/textoclaro"
                            android:orientation="horizontal" />

                        <LinearLayout
                            android:id="@+id/version"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"


                                android:layout_marginRight="8dp"
                                app:srcCompat="@android:drawable/ic_dialog_info"
                                app:tint="@color/alternativo" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/version"
                                android:textColor="@color/texto"
                                android:textSize="18sp" />

                            <TextView

                                android:id="@+id/versiontext"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1.0.0"
                                android:textColor="@color/texto" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/compartir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compartir" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp"
                    app:cardBackgroundColor="@color/carcolor"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/compartirluck"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"

                                android:layout_marginRight="8dp"
                                app:srcCompat="?attr/actionModeShareDrawable"
                                app:tint="@color/alternativo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/compartir"
                                android:textColor="@color/texto"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_weight="1"
                                android:text="@string/app_name"
                                android:textColor="@color/texto"
                                android:textSize="18sp" />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=">"
                                android:textColor="@color/texto" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/apariencia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apariencia" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp"
                    app:cardBackgroundColor="@color/carcolor"
                    app:cardCornerRadius="8dp">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButton1"
                                style="@style/ChipRadioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:checked="true"
                                android:gravity="center"
                                android:text="@string/claro"
                                android:textSize="12sp" />

                            <RadioButton
                                android:id="@+id/radioButton2"
                                style="@style/ChipRadioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/oscuro"
                                android:textSize="12sp" />

                            <RadioButton
                                android:id="@+id/radioButton3"
                                style="@style/ChipRadioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"

                                android:gravity="center"
                                android:text="@string/predeterminada"
                                android:textSize="12sp" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/soporte"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/soporte" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp"
                    app:cardBackgroundColor="@color/carcolor"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/soportetext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"

                                android:layout_marginRight="8dp"
                                app:srcCompat="@android:drawable/ic_dialog_email"
                                app:tint="@color/alternativo" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/informarerror"
                                android:textColor="@color/texto"
                                android:textSize="18sp" />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=">"
                                android:textColor="@color/texto" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@color/textoclaro"
                            android:orientation="horizontal" />

                        <LinearLayout
                            android:id="@+id/websss"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"


                                android:layout_marginRight="8dp"
                                app:srcCompat="@drawable/baseline_language_24"
                                app:tint="@color/alternativo" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/website"
                                android:textColor="@color/texto"
                                android:textSize="18sp" />

                            <TextView


                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=">"
                                android:textColor="@color/texto" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>