<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.voucher.VoucherFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/title_voucher"
                android:textColor="@color/texto"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edit"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/editar"
                    android:textColor="@color/alternativo"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imageViewqr"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:src="@drawable/baseline_qr_code_scanner_24"
                    app:tint="@color/alternativo"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imageViewcesto"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:src="@drawable/baseline_delete_24"
                    app:tint="@color/alternativo"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/carcolor"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:src="@drawable/baseline_person_24"
                        app:tint="@color/texto"
                        tools:ignore="ContentDescription,InefficientWeight" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black_overlay"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <EditText

                        android:id="@+id/nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="---"
                        android:textColor="@color/texto"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/carcolor"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView

                        android:id="@+id/id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ID:"
                        android:textColor="@color/texto"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black_overlay"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <ImageView

                        android:id="@+id/imagenviewqrgenerado"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:src="@drawable/baseline_qr_code_24"
                        tools:ignore="ContentDescription,InefficientWeight" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:text="@string/help_vaucher"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>